fix bootstrap display-1 class on mobile

--- a/public/assets/scss/styles.scss
+++ b/public/assets/scss/styles.scss
@@ -1875,3 +1875,12 @@ $linkedin: #0077b5;
     width: 170px;
   }
 }
+
+
+.display-1 {
+  font-size: $display1-size / 3;
+
+  @include media-breakpoint-up(md) {
+    font-size: $display1-size;
+  }
+}
